objects/Contact.object
<CustomObject><fields>
        <fullName>Asst_Email__c</fullName>
        <description>Indicates the email of the assistant</description>
        <label>Asst. Email</label>
        <type>Email</type>
    </fields><fields>
        <fullName>Company_Name_text__c</fullName>
        <label>Company Name (text)</label>
        <length>64</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Current_Exec_Member__c</fullName>
        <formula>if( Exec_Member_End_Date__c &gt;TODAY(),"Yes", "No")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Exec. Member?</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Current_Ind_Member__c</fullName>
        <formula>if( Ind_Member_End_Date__c &gt;TODAY(),"Yes", "No")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Ind. Member?</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Current_Org_Member__c</fullName>
        <description>Indicates if the Organization, the Contact is associated with is a current member</description>
        <formula>if(OR(Account.Current_Member__c = "Yes",  Account.Parent_Current_Member__c ="Yes"), "Yes", "No")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Org. Member?</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Donor_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indication if the contact is the donor contact</inlineHelpText>
        <label>Donor Contact</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>EAB_Emeritus__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if the contact is a EAB Emeritus</inlineHelpText>
        <label>EAB Emeritus</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Exec_Member_End_Date__c</fullName>
        <inlineHelpText>Calculates the end date of the last Executive Advisory Board membership</inlineHelpText>
        <label>Exec. Member End Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>First_Donation_Date__c</fullName>
        <inlineHelpText>Calculates the date of the first donation</inlineHelpText>
        <label>First Donation Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>ID_Status__c</fullName>
        <description>Historical ACT ID/Status</description>
        <label>ID/Status</label>
        <length>64</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Ind_Member_End_Date__c</fullName>
        <description>Indicates when the membership ends</description>
        <inlineHelpText>Calculates the end date of the last Individual membership</inlineHelpText>
        <label>Ind. Member End Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Last_Donation_Date__c</fullName>
        <inlineHelpText>Calculates the date of the last donation</inlineHelpText>
        <label>Last Donation Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Last_Participation_Date__c</fullName>
        <inlineHelpText>Indicates the last campaign participation date (using campaign members)</inlineHelpText>
        <label>Last Participation Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Last_Registration_Date__c</fullName>
        <description>Indicates the date the Contact last purchased a registration for a program, workshop, event</description>
        <inlineHelpText>Indicates the date the Contact last purchased a registration for a program, workshop, event</inlineHelpText>
        <label>Last Registration Date</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Last_Transaction__c</fullName>
        <label>Last Transaction</label>
        <type>Date</type>
    </fields><fields>
        <fullName>Member_Emeritus__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if this contact is a emeritus member</inlineHelpText>
        <label>Member Emeritus</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Membership_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Indicate if the contact is the membership contact</inlineHelpText>
        <label>Membership Contact</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>64</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Org_Membership_Type__c</fullName>
        <formula>Account.Membership_Type__c</formula>
        <inlineHelpText>If the Organization is a current member, displays the membership type</inlineHelpText>
        <label>Org. Membership Type</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Spouse__c</fullName>
        <label>Spouse</label>
        <length>64</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Suffix__c</fullName>
        <label>Suffix</label>
        <length>34</length>
        <type>Text</type>
    </fields><fields>
        <fullName>TempText__c</fullName>
        <description>Used to prevent recursive looping</description>
        <label>TempText</label>
        <length>5</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Total_Donated__c</fullName>
        <inlineHelpText>Calculates the lifetime amount donated</inlineHelpText>
        <label>Total Donated</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields><fields>
        <fullName>Update_Donor_Contact__c</fullName>
        <label>Update Donor Contact</label>
        <length>5</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Update_Membership_Contact__c</fullName>
        <label>Update Membership Contact</label>
        <length>5</length>
        <type>Text</type>
    </fields><fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <length>255</length>
        <type>Text</type>
    </fields><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><enableEnhancedLookup>true</enableEnhancedLookup><enableFeeds>true</enableFeeds><enableHistory>false</enableHistory><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>npe01__WorkPhone__c</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews><listViews>
        <fullName>JOC_04282011</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>JOC 04282011</label>
    </listViews><listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.ADDRESS2_CITY</columns>
        <columns>CONTACT.ADDRESS2_STATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews><listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews><listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews><validationRules>
        <fullName>Change_Organization</fullName>
        <active>true</active>
        <description>Prevent users from changing the organization name of a contact if the contact is marked as primary, membership or donor contact</description>
        <errorConditionFormula>AND(ISCHANGED( AccountId )  ,OR( Primary_Contact__c = TRUE , Membership_Contact__c=TRUE,  Donor_Contact__c = TRUE))</errorConditionFormula>
        <errorMessage>Make sure the contact is not marked as Primary Contact, Membership Contact or Membership Contact before changing the Organization Name field</errorMessage>
    </validationRules><validationRules>
        <fullName>Contact_Preferred_Email</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
ISPICKVAL( npe01__Preferred_Email__c ,""),
OR(
LEN(npe01__AlternateEmail__c  )&gt;0,
LEN(npe01__WorkEmail__c )&gt;0,
LEN(npe01__HomeEmail__c  )&gt;0
)
)</errorConditionFormula>
        <errorDisplayField>npe01__Preferred_Email__c</errorDisplayField>
        <errorMessage>Please select a Preferred Email</errorMessage>
    </validationRules><validationRules>
        <fullName>Contact_Preferred_Phone</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
 ISPICKVAL(npe01__PreferredPhone__c ,""),
OR(
 LEN(MobilePhone)&gt;0,
 LEN( npe01__WorkPhone__c)&gt;0,
 LEN( OtherPhone )&gt;0
)
)</errorConditionFormula>
        <errorDisplayField>npe01__PreferredPhone__c</errorDisplayField>
        <errorMessage>Please select a Preferred Phone</errorMessage>
    </validationRules></CustomObject>